Added alternate Jupiter ACE rom: TODO: description

Improved CPC emulation: 
-Video scanlines rendering
-Joystick emulation
-Stereo emulation

Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)

Improved menu interface:
-Added action to minimize all windows

Improved ZX-Uno emulation:
-Updated BIOS, Flash and ESXDOS (ESXDOS now runs 0.8.6 final version)
-Fixed bugs on mmc and flash storage layer which prevented to update bios, esxdos rom or entire flash from the BIOS
-Fixed chloe mmu mapping: bootm has priority. If bootm=1, can't map chloe. If bootm=0, can be chloe or +2a
-Added command line setting --zxuno-initial-64k to allow loading a initial 64kb block in bootm mode, bypassing the normal boot rom

Improved TBBlue emulation:
-Added debug window to enable/disable individual sprites
-Fix tbblue relative sprites when anchor sprite is not visible
-Added relative sprite type composite/unified on sprite navigator
-Fixed writing on divmmc memory when layer2 active
-Fixed detecting unified/composite sprites

Fixed CPC bugs:
-Fixed vsync and hsync interrupts
-Fixed border colour
-Fixed AY chip register selection
-Fixed CRTC interrupts. After a CRTC interrupt with Z80 interrupts disabled, they were not fired when enabling Z80 interrupts
-Fixed setting bit 4 of the "Select screen mode and rom configuration" register of the Gate-Array and interrupt request

Fixed loading General Sound rom

Fixed segfaults on fileselector +3 DSK screen previews using Speedlock protected disks or bad disks


Version 9.1 - Toi Acid Game edition. 26 November 2020

Added pc speaker audio driver (for Linux only)
Added General Sound emulation
Added compile setting to disable networking functions
Added date & time field info to ZSF snapshots
Added configuration & command line setting to save keymap type
Added some file converters: from SNA, SP, Z80, P, ZSF to SCR 

